# exos_claims_ai

./: README.md  license.txt  pyproject.toml
exos_claims_ai/: api.py  boot.py  hooks.py  install.py  modules.txt  workspace_setup.py
exos_claims_ai/config/: desktop.py
exos_claims_ai/exos_claims_ai/doctype/ai_validation_result/: ai_validation_result.json  ai_validation_result.py
exos_claims_ai/exos_claims_ai/doctype/approval_rule_configuration/: approval_rule_configuration.json  approval_rule_configuration.py
exos_claims_ai/exos_claims_ai/doctype/claim_evidence_reference/: claim_evidence_reference.json  claim_evidence_reference.py
exos_claims_ai/exos_claims_ai/doctype/evidence_reference/: evidence_reference.json  evidence_reference.py
exos_claims_ai/exos_claims_ai/doctype/exos_ai_settings/: exos_ai_settings.json  exos_ai_settings.py
exos_claims_ai/exos_claims_ai/doctype/insurance_claim/: insurance_claim.json  insurance_claim.py
exos_claims_ai/exos_claims_ai/doctype/insurance_policy/: insurance_policy.json  insurance_policy.py
exos_claims_ai/fixtures/: approval_rule_configuration.json  number_card.json  roles.json  workflow.json  workspace.json
exos_claims_ai/print_formats/: ai_validation_result.html  exos_print.css  insurance_claim.html  insurance_policy.html
exos_claims_ai/public/css/: exos_login.css  exos_theme.css
exos_claims_ai/public/js/: exos_desk.js  insurance_claim.js
exos_claims_ai/seed_data/: approval_rule_configuration.json  roles.json  workflow.json  workspace.json
exos_claims_ai/www/: login.css  login.html  login.js  login.py
